Remove redundant code

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "51f66363-59e0-40f3-a79f-d4db1d5fc9ae",
+   "execution_count": 15,
+   "id": "70786230-1a9c-4d48-9c49-1c20307cd3d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,31 +24,25 @@
     "(11, 3.65),\n",
     "(12, 4.25)\n",
     "]\n",
-    "\n",
     "df = pd.DataFrame(prices, columns=[\"month\", \"price\"])\n",
     "df = df.set_index(\"month\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "dbef6e99-5bcd-4dcd-bec6-8361ae14be4f",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 17,
+   "id": "2a297703-fe0c-41cc-99b1-107f4a150ed0",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df['priceUSD'] = df['price'] / 4\n",
-    "df = pd.DataFrame(prices_updated, columns=[\"month\", \"price\", \"USDprice\"])"
+    "df['USDprice'] = df['price'] / 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "e7d5e5ab-3c57-4887-81a6-2f4a46ea7ebb",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 20,
+   "id": "b6959b2b-c2c1-4240-8ea0-9fdb7e262866",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -68,6 +62,14 @@
     "plt.ylim(ymin=0, ymax=2)\n",
     "plt.grid(True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9874c7e3-05fe-4bdf-bb48-1cb1b4817033",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
